# w801_cmake_template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flash_img.sh  make_img.sh  sdk.conf  w800sdk.conf  w801_eide_template.code-workspace
.eide/: eide.json  env.ini  release.files.options.yml  release.options.any.gcc.json
demo/: wm_demo.h
demo/console/: wm_demo_console_task.c
doc/: ChangeLog.txt
ld/w800/: gcc_csky.ld
src/: FileLists.cmake  Makefile  main.c  main.h
tools/: flash_firmware.sh.in  flash_firmware.win32.in  make_firmware.sh.in  setup.bat
tools/w800/: .config  conf.mk  inc.mk  rules.mk  wm_tool.c
